--- a/Ahmad-1.css
+++ b/Ahmad-1.css
@@ -588,7 +588,7 @@
 .u-section-5 .u-image-1 {
   width: 100px;
   height: 100px;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-3 {
@@ -602,7 +602,7 @@
 .u-section-5 .u-image-2 {
   width: 100px;
   height: 100px;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-4 {
@@ -616,7 +616,7 @@
 .u-section-5 .u-image-3 {
   width: 100px;
   height: 100px;
-  margin: 13px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-5 {
@@ -630,7 +630,7 @@
 .u-section-5 .u-image-4 {
   width: 100px;
   height: 100px;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-6 {
@@ -644,7 +644,7 @@
 .u-section-5 .u-image-5 {
   width: 100px;
   height: 100px;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-7 {
@@ -658,7 +658,7 @@
 .u-section-5 .u-image-6 {
   width: 100px;
   height: 100px;
-  margin: 13px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-wrap-2 {
@@ -667,7 +667,7 @@
 }
 
 .u-section-5 .u-layout-cell-8 {
-  min-height: 87px;
+  min-height: 105px;
 }
 
 .u-section-5 .u-container-layout-8 {
@@ -679,7 +679,7 @@
 }
 
 .u-section-5 .u-layout-cell-9 {
-  min-height: 62px;
+  min-height: 164px;
 }
 
 .u-section-5 .u-container-layout-9 {
@@ -687,7 +687,7 @@
 }
 
 .u-section-5 .u-layout-cell-10 {
-  min-height: 209px;
+  min-height: 164px;
 }
 
 .u-section-5 .u-container-layout-10 {
@@ -697,11 +697,11 @@
 .u-section-5 .u-image-7 {
   width: 100px;
   height: 100px;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-11 {
-  min-height: 209px;
+  min-height: 164px;
 }
 
 .u-section-5 .u-container-layout-11 {
@@ -711,11 +711,11 @@
 .u-section-5 .u-image-8 {
   width: 78px;
   height: 100px;
-  margin: 18px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-12 {
-  min-height: 62px;
+  min-height: 164px;
 }
 
 .u-section-5 .u-container-layout-12 {
@@ -723,12 +723,12 @@
 }
 
 .u-section-5 .u-layout-wrap-3 {
-  margin-top: 30px;
+  margin-top: 45px;
   margin-bottom: 0;
 }
 
 .u-section-5 .u-layout-cell-13 {
-  min-height: 77px;
+  min-height: 101px;
 }
 
 .u-section-5 .u-container-layout-13 {
@@ -740,7 +740,7 @@
 }
 
 .u-section-5 .u-layout-cell-14 {
-  min-height: 210px;
+  min-height: 168px;
 }
 
 .u-section-5 .u-container-layout-14 {
@@ -750,11 +750,11 @@
 .u-section-5 .u-image-9 {
   width: 100px;
   height: 100px;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-15 {
-  min-height: 210px;
+  min-height: 168px;
 }
 
 .u-section-5 .u-container-layout-15 {
@@ -764,11 +764,11 @@
 .u-section-5 .u-image-10 {
   width: 100px;
   height: 100px;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-16 {
-  min-height: 210px;
+  min-height: 168px;
 }
 
 .u-section-5 .u-container-layout-16 {
@@ -778,11 +778,11 @@
 .u-section-5 .u-image-11 {
   width: 100px;
   height: 100px;
-  margin: 20px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-17 {
-  min-height: 210px;
+  min-height: 170px;
 }
 
 .u-section-5 .u-container-layout-17 {
@@ -792,7 +792,7 @@
 .u-section-5 .u-image-12 {
   width: 100px;
   height: 100px;
-  margin: 20px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-wrap-4 {
@@ -801,7 +801,7 @@
 }
 
 .u-section-5 .u-layout-cell-18 {
-  min-height: 86px;
+  min-height: 162px;
 }
 
 .u-section-5 .u-container-layout-18 {
@@ -813,7 +813,12 @@
 }
 
 .u-section-5 .u-layout-cell-19 {
-  min-height: 189px;
+  min-height: 162px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-5 .u-container-layout-19 {
@@ -823,11 +828,16 @@
 .u-section-5 .u-image-13 {
   width: 100px;
   height: 100px;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-20 {
-  min-height: 189px;
+  min-height: 162px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-5 .u-container-layout-20 {
@@ -837,11 +847,14 @@
 .u-section-5 .u-image-14 {
   width: 100px;
   height: 100px;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-21 {
-  min-height: 189px;
+  min-height: 162px;
+  --animation-custom_in-scale: 1;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
 }
 
 .u-section-5 .u-container-layout-21 {
@@ -851,11 +864,16 @@
 .u-section-5 .u-image-15 {
   width: 100px;
   height: 100px;
-  margin: 13px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-22 {
-  min-height: 189px;
+  min-height: 162px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-5 .u-container-layout-22 {
@@ -865,11 +883,14 @@
 .u-section-5 .u-image-16 {
   width: 100px;
   height: 100px;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-23 {
-  min-height: 189px;
+  min-height: 162px;
+  --animation-custom_in-scale: 1;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
 }
 
 .u-section-5 .u-container-layout-23 {
@@ -879,11 +900,16 @@
 .u-section-5 .u-image-17 {
   width: 100px;
   height: 100px;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-5 .u-layout-cell-24 {
-  min-height: 189px;
+  min-height: 162px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-5 .u-container-layout-24 {
@@ -893,7 +919,45 @@
 .u-section-5 .u-image-18 {
   width: 100px;
   height: 100px;
-  margin: 13px auto 0;
+  margin: 0 auto;
+}
+
+.u-section-5 .u-layout-cell-25 {
+  min-height: 162px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-5 .u-container-layout-25 {
+  padding: 30px 60px;
+}
+
+.u-section-5 .u-image-19 {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+}
+
+.u-section-5 .u-layout-cell-26 {
+  min-height: 162px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-5 .u-container-layout-26 {
+  padding: 30px;
+}
+
+.u-section-5 .u-image-20 {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
 }
 
 @media (max-width: 1199px) {
@@ -932,7 +996,11 @@
 
   .u-section-5 .u-layout-cell-8 {
     background-position: 50% 50%;
-    min-height: 72px;
+    min-height: 87px;
+  }
+
+  .u-section-5 .u-layout-cell-9 {
+    min-height: 62px;
   }
 
   .u-section-5 .u-layout-cell-10 {
@@ -943,17 +1011,21 @@
     min-height: 173px;
   }
 
+  .u-section-5 .u-layout-cell-12 {
+    min-height: 62px;
+  }
+
   .u-section-5 .u-layout-cell-13 {
     background-position: 50% 50%;
-    min-height: 63px;
+    min-height: 84px;
   }
 
   .u-section-5 .u-layout-cell-14 {
-    min-height: 173px;
+    min-height: 139px;
   }
 
   .u-section-5 .u-layout-cell-15 {
-    min-height: 173px;
+    min-height: 139px;
   }
 
   .u-section-5 .u-layout-cell-16 {
@@ -961,20 +1033,20 @@
   }
 
   .u-section-5 .u-layout-cell-17 {
-    min-height: 173px;
+    min-height: 140px;
   }
 
   .u-section-5 .u-layout-cell-18 {
     background-position: 50% 50%;
-    min-height: 71px;
+    min-height: 134px;
   }
 
   .u-section-5 .u-layout-cell-19 {
-    min-height: 156px;
+    min-height: 134px;
   }
 
   .u-section-5 .u-layout-cell-20 {
-    min-height: 156px;
+    min-height: 134px;
   }
 
   .u-section-5 .u-layout-cell-21 {
@@ -982,15 +1054,23 @@
   }
 
   .u-section-5 .u-layout-cell-22 {
-    min-height: 156px;
+    min-height: 134px;
   }
 
   .u-section-5 .u-layout-cell-23 {
-    min-height: 156px;
+    min-height: 134px;
   }
 
   .u-section-5 .u-layout-cell-24 {
-    min-height: 156px;
+    min-height: 134px;
+  }
+
+  .u-section-5 .u-layout-cell-25 {
+    min-height: 134px;
+  }
+
+  .u-section-5 .u-layout-cell-26 {
+    min-height: 134px;
   }
 }
 
@@ -1099,7 +1179,7 @@
   }
 
   .u-section-5 .u-layout-cell-14 {
-    min-height: 133px;
+    min-height: 106px;
   }
 
   .u-section-5 .u-container-layout-14 {
@@ -1108,7 +1188,7 @@
   }
 
   .u-section-5 .u-layout-cell-15 {
-    min-height: 133px;
+    min-height: 106px;
   }
 
   .u-section-5 .u-container-layout-15 {
@@ -1126,7 +1206,7 @@
   }
 
   .u-section-5 .u-layout-cell-17 {
-    min-height: 133px;
+    min-height: 107px;
   }
 
   .u-section-5 .u-container-layout-17 {
@@ -1144,7 +1224,7 @@
   }
 
   .u-section-5 .u-layout-cell-19 {
-    min-height: 119px;
+    min-height: 103px;
   }
 
   .u-section-5 .u-container-layout-19 {
@@ -1153,7 +1233,7 @@
   }
 
   .u-section-5 .u-layout-cell-20 {
-    min-height: 119px;
+    min-height: 103px;
   }
 
   .u-section-5 .u-container-layout-20 {
@@ -1171,7 +1251,7 @@
   }
 
   .u-section-5 .u-layout-cell-22 {
-    min-height: 119px;
+    min-height: 103px;
   }
 
   .u-section-5 .u-container-layout-22 {
@@ -1180,7 +1260,7 @@
   }
 
   .u-section-5 .u-layout-cell-23 {
-    min-height: 119px;
+    min-height: 103px;
   }
 
   .u-section-5 .u-container-layout-23 {
@@ -1189,12 +1269,25 @@
   }
 
   .u-section-5 .u-layout-cell-24 {
-    min-height: 119px;
+    min-height: 103px;
   }
 
   .u-section-5 .u-container-layout-24 {
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .u-section-5 .u-layout-cell-25 {
+    min-height: 103px;
+  }
+
+  .u-section-5 .u-container-layout-25 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-5 .u-layout-cell-26 {
+    min-height: 103px;
   }
 }
 
@@ -1301,7 +1394,7 @@
   }
 
   .u-section-5 .u-layout-cell-14 {
-    min-height: 299px;
+    min-height: 239px;
   }
 
   .u-section-5 .u-container-layout-14 {
@@ -1310,7 +1403,7 @@
   }
 
   .u-section-5 .u-layout-cell-15 {
-    min-height: 299px;
+    min-height: 239px;
   }
 
   .u-section-5 .u-container-layout-15 {
@@ -1342,7 +1435,7 @@
   }
 
   .u-section-5 .u-layout-cell-19 {
-    min-height: 268px;
+    min-height: 309px;
   }
 
   .u-section-5 .u-container-layout-19 {
@@ -1351,7 +1444,7 @@
   }
 
   .u-section-5 .u-layout-cell-20 {
-    min-height: 268px;
+    min-height: 309px;
   }
 
   .u-section-5 .u-container-layout-20 {
@@ -1360,7 +1453,7 @@
   }
 
   .u-section-5 .u-layout-cell-21 {
-    min-height: 252px;
+    min-height: 309px;
   }
 
   .u-section-5 .u-container-layout-21 {
@@ -1369,7 +1462,7 @@
   }
 
   .u-section-5 .u-layout-cell-22 {
-    min-height: 180px;
+    min-height: 309px;
   }
 
   .u-section-5 .u-container-layout-22 {
@@ -1378,7 +1471,7 @@
   }
 
   .u-section-5 .u-layout-cell-23 {
-    min-height: 180px;
+    min-height: 309px;
   }
 
   .u-section-5 .u-container-layout-23 {
@@ -1387,10 +1480,28 @@
   }
 
   .u-section-5 .u-layout-cell-24 {
-    min-height: 180px;
+    min-height: 309px;
   }
 
   .u-section-5 .u-container-layout-24 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-layout-cell-25 {
+    min-height: 309px;
+  }
+
+  .u-section-5 .u-container-layout-25 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-layout-cell-26 {
+    min-height: 309px;
+  }
+
+  .u-section-5 .u-container-layout-26 {
     padding-left: 10px;
     padding-right: 10px;
   }
@@ -1492,11 +1603,11 @@
   }
 
   .u-section-5 .u-layout-cell-14 {
-    min-height: 188px;
+    min-height: 150px;
   }
 
   .u-section-5 .u-layout-cell-15 {
-    min-height: 188px;
+    min-height: 150px;
   }
 
   .u-section-5 .u-layout-cell-16 {
@@ -1530,7 +1641,7 @@
   }
 
   .u-section-5 .u-layout-cell-22 {
-    min-height: 113px;
+    min-height: 195px;
   }
 
   .u-section-5 .u-layout-cell-23 {
@@ -1539,6 +1650,14 @@
 
   .u-section-5 .u-layout-cell-24 {
     min-height: 113px;
+  }
+
+  .u-section-5 .u-layout-cell-25 {
+    min-height: 113px;
+  }
+
+  .u-section-5 .u-layout-cell-26 {
+    min-height: 195px;
   }
 }.u-section-6 .u-sheet-1 {
   min-height: 403px;
@@ -1760,7 +1879,6 @@
 }
 
 .u-section-7 .u-btn-1 {
-  background-image: none;
   border-style: solid;
 }
 
