--- a/Home.css
+++ b/Home.css
@@ -60,7 +60,7 @@
 
 .u-section-1 .u-image-1 {
   min-height: 536px;
-  background-image: url("images/ahmadPic.png");
+  background-image: url("images/ahmadPic.webp");
 }
 
 .u-section-1 .u-container-layout-2 {
